# FinSight-RAG

./: .gitignore  README.md  pyproject.toml
finsight_rag/: app.py  utils.py
finsight_rag/agent/: agent.py  check_agent.ipynb  utils.py
finsight_rag/config/: chat_llm_config.yaml  rag_config.yaml  sentiment_analyser_config.yaml
finsight_rag/datasets/: download_datasets.py
finsight_rag/ingest/: check_update_vector_store.ipynb  check_vector_store.ipynb  ingest_annual_reports_pdfs.py  utils.py
finsight_rag/llms/: chat_llms.ipynb  check_text_generator.ipynb  llm_service.py  text_generator.py
finsight_rag/rag/: check_rag_service.ipynb  rag_service.py
finsight_rag/sentiment/: check_sentiment_analyser.ipynb  sentiment_analysis_service.py
finsight_rag/tests/: test_ingest_utils.py
finsight_rag/train/: train_sentiment_analyser.py  utils.py
finsight_rag/vector_store/: vector_store_wrapper.py
