[tool.poetry]
name = "finsight-rag"
version = "0.1.0"
description = "Financial document assistant using RAG, fine-tuned NER, and agents"
authors = ["Lucas von Ancken Garcia"]
packages = [{ include = "finsight_rag" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

torch = "*"
transformers = "^4.40"
datasets = "^2.19"
sentence-transformers = "^2.7"


gradio = "^4.30"

pydantic = "^2.7"
tqdm = "*"
numpy = "*"
langchain-core = "^1.2.4"
langchain-huggingface = "^1.2.0"
langchain-chroma = "^1.1.0"
chromadb = "^1.3.7"
langchain-text-splitters = "^1.1.0"
langchain-community = "^0.4.1"
pypdf = "^6.5.0"
accelerate = "^1.12.0"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
black = "*"
ruff = "*"
